--- a/index.html
+++ b/index.html
@@ -1,82 +1,146 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <!-- Required meta tags -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title>Significa</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <!--
       The following comment ensures that the prettier extension
       does not mis-format this specific file
     -->
     <!-- prettier-ignore -->
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Your go-to digital agency
-    Significa is a digital design-led agency mainly focused on Product Development.
-    Oopsie for users — Your favourite food, one click away!
-    Business Analysis, Product Management, Consultancy & 5 others
-    Opennode — Bitcoin, for everyday.
-    UI/UX, Front End, Front End
-    AKASHA — Open systems to expand our collective mind.
-    UI/UX, Front End, Illustration
-    We build digital products
-    Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.
-    Strategy
-    UX research
-    Business strategy
-    Brand strategy
-    Product strategy
-    Product management
-    Product design
-    Product design
-    User experience
-    User interface
-    Brand development
-    Illustration
-    Motion & Video
-    Development
-    Development
-    Front-end engineering
-    Web-app development
-    Native app development
-    Development operations
-    View services
-    View services
-    What's new on Significa Labs
-    Automating releases for UI Kits — How to automate release logs and builds for your style guides
-    Tutorial on Medium
-    An iceberg sank the Titanic — But what’s that got to do with text hierarchy?
-    Article on Medium
-    On creating synergies — Sharing without compromising our identity
-    Article on Medium
-    Enter the Lab
-    Drop by, we're hiring.
-    We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to.
-    View careers
-    Legal © 2019
-    Say
-    hello@significa.co
-    (+351) 226 001 751
-    Links
-    Home
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Network
-    Coletiv
-    Adamant
-    Follow us
-  </body>
+    <nav class="navbar"> <img src="./images/logo.svg" alt="logo">
+        <button class="btn">Services</button>
+        <button class="btn">About</button>
+        <button class="btn">Careers</button>
+        <button class="btn">Contact</button>
+
+        </div>
+    </nav>
+    <div class="jumbotron" style="width: 40%; height: 30rem; background-color:white;">
+        <h1 style="height: 8rem;"></h1>
+        <h1 class="display-4">Your go-to <br> digital agency</h1>
+    </div>
+    <section style="width: 40%; margin: 5rem; ">
+        <h5>Significa is a digital design-led agency mainly <br> focused on Product Development.</h5>
+    </section>
+    <div class="row" style="margin: 5rem;">
+        <div class="col-4">
+            <div class="card" style="width: 18rem;">
+                <img src="./images/1.png" class="card-img-top" alt="image1">
+                <div class="card-body">
+                    <p class="card-text">
+                        <p>Oopsie for users — Your favourite food, one click away!</p>
+                        <p>Business Analysis, Product Management, Consultancy & 5 others</p>
+                    </p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card" style="width: 18rem;">
+                <img src="./images/2.png" class="card-img-top" alt="image2">
+                <div class="card-body">
+                    <p class="card-text">
+                        <p>Opennode — Bitcoin, for everyday.</p>
+                        <p>UI/UX, Front End, Front End</p>
+                    </p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card" style="width: 18rem;">
+                <img src="./images/3.png" class="card-img-top" alt="image3">
+                <div class="card-body">
+                    <p class="card-text">
+                        <p>AKASHA — Open systems to expand our collective mind.</p>
+                        <p>UI/UX, Front End, Illustration</p>
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin: 8rem;">
+        <div class="col-6">
+            <h4 style="width: 50%;">We build digital products</h4>
+        </div>
+        <div class="col-6"> Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.</div>
+    </div>
+    <div class="row" style="margin: 8rem;">
+
+        <div class="col">
+            <h6>Strategy</h6>
+            <ul class="list-group">
+                <li class="list-group-item">UX research</li>
+                <li class="list-group-item">Business strategy</li>
+                <li class="list-group-item">Brand strategy</li>
+                <li class="list-group-item">Product strategy</li>
+                <li class="list-group-item">Product management</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h6>Product design</h6>
+            <ul class="list-group">
+                <li class="list-group-item">Product design</li>
+                <li class="list-group-item">User experience</li>
+                <li class="list-group-item">User interface</li>
+                <li class="list-group-item">Brand development</li>
+                <li class="list-group-item">Illustration</li>
+                <li class="list-group-item">Motion & Video</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h6>Development</h6>
+            <ul class="list-group">
+                <li class="list-group-item">Front-end engineering</li>
+                <li class="list-group-item">Web-app development</li>
+                <li class="list-group-item">Native app development </li>
+                <li class="list-group-item">Development operations</li>
+                + </ul>
+        </div>
+    </div>
+    <div style="color: blue; width: 100%;  text-align: center; margin-bottom: 8rem;"> <a href="#" style=" text-decoration: none">View services  </a><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+    </svg></div>
+    <div class="row" style="height: 40rem; background-color: rgb(34, 34, 34); color: whitesmoke">
+        <div class="col-4" style="padding: 5rem;">
+            <h3>What's new on Significa Labs</h3>
+        </div>
+        <div class="col-8" style="padding: 5rem;">
+            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;">
+            <p>Automating releases for UI Kits — How to automate release logs and builds for your style guides</p>
+            <p> Tutorial on Medium</p>
+            <hr style="color: whitesmoke;">
+            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;">
+            <p>An iceberg sank the Titanic — But what’s that got to do with text hierarchy? </p>
+            <p>Article on Medium</p>
+            <hr style="color: whitesmoke;">
+            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;">
+            <p>On creating synergies — Sharing without compromising our identity
+                <p>Article on Medium </p>
+            </p>
+            <hr>
+            <p><a href="#" style="color: gray;">Enter the Lab  </a>
+                <svg style="color: gray;" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></div>
+        </p>
+    </div>
+    </div>
+
+
+
+    Drop by, we're hiring. We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to. View careers Legal © 2019 Say hello@significa.co
+    (+351) 226 001 751 Links Home Showcase Services About Careers Labs Contact Network Coletiv Adamant Follow us
+</body>
+
 </html>
