--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+
     <title>Significa</title>
 </head>
 
@@ -16,131 +17,230 @@
       does not mis-format this specific file
     -->
     <!-- prettier-ignore -->
-    <nav class="navbar"> <img src="./images/logo.svg" alt="logo">
-        <button class="btn">Services</button>
-        <button class="btn">About</button>
-        <button class="btn">Careers</button>
-        <button class="btn">Contact</button>
+    <nav class="navbar" style=" height: 10rem; ">
+        <div><img src="./images/logo.svg" alt="logo"></div>
+        <div style="width: 45%; ">
+            <button class="btn">Showcase</button>
+            <button class="btn">Services</button>
+            <button class="btn">About</button>
+            <button class="btn">Careers</button>
+            <button class="btn">Labs</button>
+            <button class="btn">Contact</button></div>
 
-        </div>
     </nav>
-    <div class="jumbotron" style="width: 40%; height: 30rem; background-color:white;">
-        <h1 style="height: 8rem;"></h1>
+    <div class="jumbotron" style="width: 40%; height: 15rem; background-color:white; margin-top: 0;">
+
         <h1 class="display-4">Your go-to <br> digital agency</h1>
     </div>
-    <section style="width: 40%; margin: 5rem; ">
-        <h5>Significa is a digital design-led agency mainly <br> focused on Product Development.</h5>
+    <section style=" margin:3rem; ">
+        <h4>Significa is a digital design-led agency mainly <br> focused on Product Development.</h4>
     </section>
-    <div class="row" style="margin: 5rem;">
+    <div class="row" style="margin: 2rem;">
         <div class="col-4">
-            <div class="card" style="width: 18rem;">
-                <img src="./images/1.png" class="card-img-top" alt="image1">
+            <div class="card" style="width: 20rem; border: none; font-size: 1.1rem">
+                <img src="./images/2.png" class="card-img-top" alt="image1">
                 <div class="card-body">
                     <p class="card-text">
                         <p>Oopsie for users — Your favourite food, one click away!</p>
-                        <p>Business Analysis, Product Management, Consultancy & 5 others</p>
+                        <p style="font-size: smaller;">Business Analysis, Product Management, Consultancy & 5 others</p>
                     </p>
 
                 </div>
             </div>
         </div>
         <div class="col-4">
-            <div class="card" style="width: 18rem;">
-                <img src="./images/2.png" class="card-img-top" alt="image2">
+            <div class="card" style="width: 20rem; border: none; font-size: 1.1rem">
+                <img src="./images/1.png" class="card-img-top" alt="image2">
                 <div class="card-body">
                     <p class="card-text">
                         <p>Opennode — Bitcoin, for everyday.</p>
-                        <p>UI/UX, Front End, Front End</p>
+                        <p style="font-size: smaller;">UI/UX, Front End, Front End</p>
                     </p>
 
                 </div>
             </div>
         </div>
         <div class="col-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 20rem; border: none; font-size: 1.1rem">
                 <img src="./images/3.png" class="card-img-top" alt="image3">
                 <div class="card-body">
                     <p class="card-text">
                         <p>AKASHA — Open systems to expand our collective mind.</p>
-                        <p>UI/UX, Front End, Illustration</p>
+                        <p style="font-size: smaller;">UI/UX, Front End, Illustration</p>
                     </p>
 
                 </div>
             </div>
         </div>
     </div>
-    <div class="row" style="margin: 8rem;">
-        <div class="col-6">
-            <h4 style="width: 50%;">We build digital products</h4>
+    <div class="row" style="margin: 10rem 2rem;">
+        <div class="col-5">
+            <h3 class="font-weight-lighter" style=" font-size: 2.3rem;">We build digital <br> products</h3>
         </div>
-        <div class="col-6"> Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.</div>
+        <div class="col-7" style="font-size: 1.3rem;">
+            <p style="width: 80%;">Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.</p>
+        </div>
     </div>
-    <div class="row" style="margin: 8rem;">
+    <div class="row" style="margin: 8rem; font-size: 1.2rem; padding: 0;">
 
         <div class="col">
-            <h6>Strategy</h6>
+
             <ul class="list-group">
-                <li class="list-group-item">UX research</li>
-                <li class="list-group-item">Business strategy</li>
-                <li class="list-group-item">Brand strategy</li>
-                <li class="list-group-item">Product strategy</li>
-                <li class="list-group-item">Product management</li>
+                <li class="list-group-item border-0">Strategy</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>UX research</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Business strategy</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Brand strategy</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Product strategy</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Product management</li>
             </ul>
         </div>
         <div class="col">
-            <h6>Product design</h6>
+
             <ul class="list-group">
-                <li class="list-group-item">Product design</li>
-                <li class="list-group-item">User experience</li>
-                <li class="list-group-item">User interface</li>
-                <li class="list-group-item">Brand development</li>
-                <li class="list-group-item">Illustration</li>
-                <li class="list-group-item">Motion & Video</li>
+                <li class="list-group-item border-0">Product Design</li>
+
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Product design</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>User experience</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>User interface</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Brand development</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Illustration</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Motion & Video</li>
             </ul>
         </div>
         <div class="col">
-            <h6>Development</h6>
+
             <ul class="list-group">
-                <li class="list-group-item">Front-end engineering</li>
-                <li class="list-group-item">Web-app development</li>
-                <li class="list-group-item">Native app development </li>
-                <li class="list-group-item">Development operations</li>
-                + </ul>
+                <li class="list-group-item border-0">Development</li>
+
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Front-end engineering</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Web-app development</li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Native app development </li>
+                <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+</svg>Development operations</li>
+            </ul>
         </div>
     </div>
     <div style="color: blue; width: 100%;  text-align: center; margin-bottom: 8rem;"> <a href="#" style=" text-decoration: none">View services  </a><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
       <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
     </svg></div>
     <div class="row" style="height: 40rem; background-color: rgb(34, 34, 34); color: whitesmoke">
-        <div class="col-4" style="padding: 5rem;">
-            <h3>What's new on Significa Labs</h3>
+        <div class="col-4" style="padding: 5rem;  ">
+            <h3 style="font-size: 2.3rem; font-weight: lighter;">What's new on Significa Labs</h3>
         </div>
-        <div class="col-8" style="padding: 5rem;">
-            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;">
+        <div class="col-8" style="padding: 5rem; font-size: 1.3rem;">
+            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;" class="rounded-sm">
             <p>Automating releases for UI Kits — How to automate release logs and builds for your style guides</p>
-            <p> Tutorial on Medium</p>
+            <p style="font-size: smaller;"> Tutorial on Medium</p>
             <hr style="color: whitesmoke;">
-            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;">
+            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;" class="rounded-sm">
             <p>An iceberg sank the Titanic — But what’s that got to do with text hierarchy? </p>
-            <p>Article on Medium</p>
+            <p style="font-size: smaller;">Article on Medium</p>
             <hr style="color: whitesmoke;">
-            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;">
+            <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;" class="rounded-sm">
             <p>On creating synergies — Sharing without compromising our identity
-                <p>Article on Medium </p>
+                <p style="font-size: smaller;">Article on Medium </p>
             </p>
             <hr>
             <p><a href="#" style="color: gray;">Enter the Lab  </a>
                 <svg style="color: gray;" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
-            </svg></div>
-        </p>
+            </svg>
+            </p>
+        </div>
     </div>
+    <div class="row">
+
+        <div class="col-4">
+            <h2 style="margin: 5rem; font-size: 2.3rem; font-weight: lighter; ">Drop by,<br> we're hiring.</h2>
+        </div>
+
+        <div class="col-8" style="margin-top: 6rem; font-size: 1.3rem; padding-left: 5rem; max-width: 45rem;"> We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to.</div>
+    </div>
+    <div style="color: blue; width: 80%;  text-align: center; margin:1rem 3rem "> <a href="#" style=" text-decoration: none">View careers  </a><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+      </svg></div>
+
+    <div class="row" style="margin: 8rem 3rem;">
+        <div class="col-4"> <img src="./images/4.png" alt="image4" width="350rem;"></div>
+        <div class="col-4"><img src="./images/5.png" alt="image5" width="350rem;"></div>
+        <div class="col-4"><img src="./images/6.png" alt="image5" width="350rem;"></div>
     </div>
 
+    <div class="row" style="margin: 10rem 0 10rem 0;">
 
+        <div class="col-2">
 
-    Drop by, we're hiring. We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to. View careers Legal © 2019 Say hello@significa.co
-    (+351) 226 001 751 Links Home Showcase Services About Careers Labs Contact Network Coletiv Adamant Follow us
+            <div><img height="25rem;" src="./images/Screenshot (490).png" alt=""></div>
+            <p style="height: 1rem;"></p>
+            <p>Legal © 2019</p>
+        </div>
+        <div class="col-2"></div>
+
+        <div class="col-2">
+            <p>Say</p>
+            <p style="height: 1rem;"></p>
+            <p>hello@significa.co </p>
+            <p>(+351) 226 001 751</p>
+        </div>
+        <div class="col-2">
+            <p>Links</p>
+            <p style="height: 1rem;"></p>
+            <p class="text-muted">Home</p>
+            <p>Showcase</p>
+            <p>Services</p>
+            <p>About</p>
+            <p>Careers</p>
+            <p>Labs</p>
+            <p>Contact</p>
+        </div>
+        <div class="col-2">
+            <p>Network</p>
+            <p style="height: 1rem;"></p>
+            <p>Coletiv</p>
+            <p>Adamant</p>
+        </div>
+        <div class="col-2">
+            <p>Follow us</p>
+            <p style="height: 1rem;"></p>
+            <div>
+                <a href="#" style="padding: 0.2rem;"><img height="25rem;" src="./images/Screenshot (486).png" alt="github"></a>
+                <a href="#" style="padding: 0.2rem;"><img height="25rem;" src="./images/Screenshot (487).png" alt="dribble"></a>
+                <a href="#" style="padding: 0.2rem;"> <img height="25rem;" src="./images/Screenshot (488).png" alt="behance"></a>
+                <a href="#" style="padding: 0.2rem;"><img height="25rem;" src="./images/Screenshot (489).png" alt="medium"></a>
+                <a href="#" style="padding: 0.2rem;"> <img height="25rem;" src="./images/082instagram_99996.png" alt="insta"></a>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
