a bit more done still not responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style/index.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -17,8 +18,8 @@
       does not mis-format this specific file
     -->
     <!-- prettier-ignore -->
-    <nav class="navbar" style=" height: 10rem; ">
-        <div><img src="./images/logo.svg" alt="logo"></div>
+    <nav class="navbar border-bottom">
+        <div class="logo"><img src="./images/logo.svg" alt="logo"></div>
         <div style="width: 45%; ">
             <button class="btn">Showcase</button>
             <button class="btn">Services</button>
@@ -28,65 +29,64 @@
             <button class="btn">Contact</button></div>
 
     </nav>
-    <div class="jumbotron" style="width: 40%; height: 15rem; background-color:white; margin-top: 0;">
+    <div class="jumbotron" id="jumb" style="background-color: white;">
 
         <h1 class="display-4">Your go-to <br> digital agency</h1>
     </div>
-    <section style=" margin:3rem; ">
-        <h4>Significa is a digital design-led agency mainly <br> focused on Product Development.</h4>
+    <section id="sec1">
+        <h3>Significa is a digital design-led agency mainly <br> focused on Product Development.</h3>
     </section>
-    <div class="row" style="margin: 2rem;">
+    <div class="row" id="cardRow">
         <div class="col-4">
-            <div class="card" style="width: 20rem; border: none; font-size: 1.1rem">
+            <div class="card">
                 <img src="./images/2.png" class="card-img-top" alt="image1">
                 <div class="card-body">
                     <p class="card-text">
                         <p>Oopsie for users — Your favourite food, one click away!</p>
-                        <p style="font-size: smaller;">Business Analysis, Product Management, Consultancy & 5 others</p>
+                        <p class="smallerText">Business Analysis, Product Management, Consultancy & 5 others</p>
                     </p>
 
                 </div>
             </div>
         </div>
         <div class="col-4">
-            <div class="card" style="width: 20rem; border: none; font-size: 1.1rem">
+            <div class="card">
                 <img src="./images/1.png" class="card-img-top" alt="image2">
                 <div class="card-body">
                     <p class="card-text">
                         <p>Opennode — Bitcoin, for everyday.</p>
-                        <p style="font-size: smaller;">UI/UX, Front End, Front End</p>
+                        <p class="smallerText">UI/UX, Front End, Front End</p>
                     </p>
 
                 </div>
             </div>
         </div>
         <div class="col-4">
-            <div class="card" style="width: 20rem; border: none; font-size: 1.1rem">
+            <div class="card">
                 <img src="./images/3.png" class="card-img-top" alt="image3">
                 <div class="card-body">
                     <p class="card-text">
                         <p>AKASHA — Open systems to expand our collective mind.</p>
-                        <p style="font-size: smaller;">UI/UX, Front End, Illustration</p>
+                        <p class="smallerText">UI/UX, Front End, Illustration</p>
                     </p>
 
                 </div>
             </div>
         </div>
     </div>
-    <div class="row" style="margin: 10rem 2rem;">
+    <div class="row" id="digitalProducts">
         <div class="col-5">
-            <h3 class="font-weight-lighter" style=" font-size: 2.3rem;">We build digital <br> products</h3>
+            <h3 class="font-weight-lighter">We build digital <br> products</h3>
         </div>
         <div class="col-7" style="font-size: 1.3rem;">
             <p style="width: 80%;">Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.</p>
         </div>
     </div>
-    <div class="row" style="margin: 8rem; font-size: 1.2rem; padding: 0;">
+    <div class="row" id="lists">
 
         <div class="col">
-
+            <p id="listTitle"> Strategy</p>
             <ul class="list-group">
-                <li class="list-group-item border-0">Strategy</li>
                 <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
 </svg>UX research</li>
@@ -106,8 +106,8 @@
         </div>
         <div class="col">
 
+            <p id="listTitle"> Product Design</p>
             <ul class="list-group">
-                <li class="list-group-item border-0">Product Design</li>
 
                 <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
@@ -130,9 +130,9 @@
             </ul>
         </div>
         <div class="col">
+            <p id="listTitle"> Development</p>
 
             <ul class="list-group">
-                <li class="list-group-item border-0">Development</li>
 
                 <li class="list-group-item border-0"><svg style="color:blue" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
@@ -149,28 +149,30 @@
             </ul>
         </div>
     </div>
-    <div style="color: blue; width: 100%;  text-align: center; margin-bottom: 8rem;"> <a href="#" style=" text-decoration: none">View services  </a><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <div id="arrowTxt1"> <a href="#" style="text-decoration: none;">View services  </a><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
       <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
     </svg></div>
-    <div class="row" style="height: 40rem; background-color: rgb(34, 34, 34); color: whitesmoke">
-        <div class="col-4" style="padding: 5rem;  ">
-            <h3 style="font-size: 2.3rem; font-weight: lighter;">What's new on Significa Labs</h3>
+
+
+    <div class="row" id="black">
+        <div class="col-4">
+            <h3>What's new on Significa Labs</h3>
         </div>
-        <div class="col-8" style="padding: 5rem; font-size: 1.3rem;">
+        <div class="col-8">
             <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;" class="rounded-sm">
             <p>Automating releases for UI Kits — How to automate release logs and builds for your style guides</p>
-            <p style="font-size: smaller;"> Tutorial on Medium</p>
+            <p class="smallerText"> Tutorial on Medium</p>
             <hr style="color: whitesmoke;">
             <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;" class="rounded-sm">
             <p>An iceberg sank the Titanic — But what’s that got to do with text hierarchy? </p>
-            <p style="font-size: smaller;">Article on Medium</p>
+            <p class="smallerText">Article on Medium</p>
             <hr style="color: whitesmoke;">
             <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;" class="rounded-sm">
             <p>On creating synergies — Sharing without compromising our identity
-                <p style="font-size: smaller;">Article on Medium </p>
+                <p class="smallerText">Article on Medium </p>
             </p>
             <hr>
-            <p><a href="#" style="color: gray;">Enter the Lab  </a>
+            <p><a href="#" style="color: gray; text-decoration: none; ">Enter the Lab  </a>
                 <svg style="color: gray;" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
             </svg>
@@ -180,16 +182,16 @@
     <div class="row">
 
         <div class="col-4">
-            <h2 style="margin: 5rem; font-size: 2.3rem; font-weight: lighter; ">Drop by,<br> we're hiring.</h2>
+            <h2 id="hiring">Drop by,<br> we're hiring.</h2>
         </div>
 
-        <div class="col-8" style="margin-top: 6rem; font-size: 1.3rem; padding-left: 5rem; max-width: 45rem;"> We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to.</div>
+        <div class="col-8" id="hiringTxt"> We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to.</div>
     </div>
-    <div style="color: blue; width: 80%;  text-align: center; margin:1rem 3rem "> <a href="#" style=" text-decoration: none">View careers  </a><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <div id="arrowTxt3"> <a href="#" style=" text-decoration: none">View careers  </a><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
       </svg></div>
 
-    <div class="row" style="margin: 8rem 3rem;">
+    <div class="row" id="imageRow">
         <div class="col-4"> <img src="./images/4.png" alt="image4" width="350rem;"></div>
         <div class="col-4"><img src="./images/5.png" alt="image5" width="350rem;"></div>
         <div class="col-4"><img src="./images/6.png" alt="image5" width="350rem;"></div>
