broke something, hope it works now

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         </div>
     </div>
     <div class="row" id="digitalProducts">
-        <div class="col-5-lg">
+        <div class="col-lg-5">
             <h3 class="font-weight-lighter">We build digital <br> products</h3>
         </div>
-        <div class="col-7-lg" style="font-size: 1.3rem;">
+        <div class="col-lg-7" style="font-size: 1.3rem;">
             <p style="width: 80%;">Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.</p>
         </div>
     </div>
@@ -158,10 +158,10 @@
 
 
     <div class="row" id="black">
-        <div class="col-4-lg">
+        <div class="col-lg-4">
             <h3>What's new on Significa Labs</h3>
         </div>
-        <div class="col-8-lg">
+        <div class="col-lg-8">
             <img src="./images/Screenshot (485).png" alt="medium" style="height: 1rem;" class="rounded-sm">
             <p>Automating releases for UI Kits — How to automate release logs and builds for your style guides</p>
             <p class="smallerText"> Tutorial on Medium</p>
@@ -194,7 +194,7 @@
         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
       </svg></div>
 
-    <div class="row-lg" id="imageRow">
+    <div class="row" id="imageRow">
         <div class="col-4 notInResp"> <img src="./images/4.png" alt="image4" width="350rem;"></div>
         <div class="col-4"><img src="./images/5.png" alt="image5" width="350rem;"></div>
         <div class="col-4 notInResp"><img src="./images/6.png" alt="image5" width="350rem;"></div>
